<resources>
    <!-- Feature name text -->
    <string name="feature_welcome">Welcome</string>
    <string name="feature_login">Login</string>
    <string name="feature_signup">Signup</string>
    <string name="feature_home">Home</string>
    <string name="feature_search">Search</string>
    <string name="feature_library">Library</string>
    <string name="feature_album">Album</string>
    <string name="feature_artist">Artist</string>
    <string name="feature_category">Category</string>
    <string name="feature_playlist">Playlist</string>
    <string name="feature_playlist_edit">Playlist edit</string>
    <string name="feature_playlist_select">Playlist select</string>
    <string name="feature_search_result">Search result</string>
    <string name="feature_player">Player</string>
    <string name="feature_playlist_info">Playlist info bottom sheet</string>
    <string name="feature_music_info">Music info bottom sheet</string>

    <!-- Label text -->
    <string name="label_music">Music</string>
    <string name="label_album">Album</string>
    <string name="label_artist">Artist</string>
    <string name="label_playlist">Playlist</string>
    <string name="label_position">#</string>
    <string name="label_title">Title</string>
    <string name="label_name">Name</string>
    <string name="label_year">Year</string>
    <string name="label_recent_played">Recent played</string>
    <string name="label_recent_searches">Recent searches</string>

    <!-- Hint text -->
    <string name="hint_name">Name…</string>
    <string name="hint_email">E-mail…</string>
    <string name="hint_password">Password…</string>
    <string name="hint_search">Search…</string>

    <!-- User action text-->
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="retry">Retry</string>
    <string name="undo">Undo</string>
    <string name="spotify_description">Millions of musics.\n \ \ Free on Spotify.</string>
    <string name="sign_up_free">Sign up free</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="use_at_least_characters">Use at least 6 characters</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="enter_email">Enter your e-mail</string>
    <string name="send_reset_password_email">We will send you a reset password e-mail</string>
    <string name="reset_password_email_sand">Reset password email sand</string>
    <string name="delete_this_playlist">Delete this playlist ?</string>
    <string name="music_already_exist">Music already exist</string>
    <string name="sort_ascending">A-Z</string>
    <string name="sort_descending">Z-A</string>
    <string name="invalid_name">Invalid name</string>
    <string name="no_more_result">No more result</string>
    <string name="playlist_add">Add to playlist</string>
    <string name="view_album">View album</string>
    <string name="view_artist">View artist</string>
    <string name="playlist_create">Create playlist</string>
    <string name="playlist_update">Update playlist</string>
    <string name="playlist_delete">Delete playlist</string>
    <string name="playlist_edit">Edit playlist</string>
    <string name="playlist_select">Select playlist</string>

    <!-- Content description text -->
    <string name="content_description_album">Album</string>
    <string name="content_description_artist">Artist</string>
    <string name="content_description_category">Category</string>
    <string name="content_description_playlist">Playlist</string>
    <string name="content_description_create">Create</string>
    <string name="content_description_delete">Delete</string>
    <string name="content_description_edit">Edit</string>
    <string name="content_description_clear">Clear</string>
    <string name="content_description_menu">Menu</string>
    <string name="content_description_back">Back</string>
    <string name="content_description_more">More</string>
    <string name="content_description_play">Play</string>
    <string name="content_description_previous">Previous</string>
    <string name="content_description_next">Next</string>
    <string name="content_description_shuffle">Shuffle</string>
    <string name="content_description_repeat">Repeat</string>
</resources>