<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:paddingTop="@dimen/padding_large"
    android:paddingBottom="@dimen/padding_large"
    android:theme="@style/Theme.Spotify">

    <TextView
        android:id="@+id/text_label_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/icon_large"
        android:paddingStart="@dimen/margin_medium"
        android:text="@string/label_title"
        android:textAllCaps="true"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="@dimen/text_body_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_label_artist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_label_artist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_artist"
        android:textAllCaps="true"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="@dimen/text_body_large"
        app:layout_constraintBottom_toBottomOf="@id/text_label_title"
        app:layout_constraintEnd_toStartOf="@id/text_label_year"
        app:layout_constraintStart_toEndOf="@id/text_label_title"
        app:layout_constraintTop_toTopOf="@id/text_label_title" />

    <TextView
        android:id="@+id/text_label_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_year"
        android:textAllCaps="true"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="@dimen/text_body_large"
        app:layout_constraintBottom_toBottomOf="@id/text_label_artist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_label_artist"
        app:layout_constraintTop_toTopOf="@id/text_label_artist" />

</androidx.constraintlayout.widget.ConstraintLayout>